Altera layout view TransistorOutput

--- a/IHM/IHM.UWP/IHM.UWP.csproj
+++ b/IHM/IHM.UWP/IHM.UWP.csproj
@@ -133,6 +133,8 @@
     <Content Include="collapse.PNG" />
     <Content Include="expander.PNG" />
     <Content Include="Properties\Default.rd.xml" />
+    <Content Include="transistor.png" />
+    <Content Include="transistor_icone.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
