--- a/IHM/IHM/IHM.csproj
+++ b/IHM/IHM/IHM.csproj
@@ -35,5 +35,8 @@
     <EmbeddedResource Update="Views\Tela_IHM.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ViewDigitalInput.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
