Pré-Finaliza primeira modelagem do projeto

--- a/IHM/IHM/IHM.csproj
+++ b/IHM/IHM/IHM.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Compile Remove="ViewModels\ModelApresentacaoDadosPage.cs" />
+    <Compile Remove="ViewModels\ModeloApresentacaoIHM.cs" />
   </ItemGroup>
 
   <ItemGroup>
