--- a/IHM/IHM.UWP/IHM.UWP.csproj
+++ b/IHM/IHM.UWP/IHM.UWP.csproj
@@ -103,6 +103,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="analogico.png" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-200.png" />
     <Content Include="Assets\LargeTile.scale-400.png" />
@@ -130,11 +131,15 @@
     <Content Include="Assets\Wide310x150Logo.scale-100.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
-    <Content Include="collapse.PNG" />
-    <Content Include="expander.PNG" />
+    <Content Include="digital.png" />
+    <Content Include="ic_launcher.png" />
+    <Content Include="ic_transistor.png" />
+    <Content Include="input_digital.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="transistor.png" />
+    <Content Include="transistor_blue.png" />
     <Content Include="transistor_icone.png" />
+    <Content Include="transistor_laranja.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
